@@ -1480,21 +1480,14 @@ function renderPortsForObject ($object_id)
 		$a_class = isEthernetPort ($port) ? 'port-menu' : '';
 		echo "<td class='tdleft' NOWRAP><input type=text name=name class='interactive-portname $a_class' value='${port['name']}' size=8></td>";
 		echo "<td><input type=text name=label value='${port['label']}'></td>";
-		if (!$port['remote_object_id'])
-		{
-			echo '<td>';
-			if ($port['iif_id'] != 1)
-				echo '<label>' . $port['iif_name'] . ' ';
-			printSelect (getExistingPortTypeOptions ($port['id']), array ('name' => 'port_type_id'), $port['oif_id']);
-			if ($port['iif_id'] != 1)
-				echo '</label>';
-			echo '</td>';
-		}
-		else
-		{
-			echo "<input type=hidden name=port_type_id value='${port['oif_id']}'><td class=tdleft>";
-			echo formatPortIIFOIF ($port) . '</td>';
-		}
+		echo '<td>';
+		if ($port['iif_id'] != 1)
+			echo '<label>' . $port['iif_name'] . ' ';
+		printSelect (getExistingPortTypeOptions ($port['id']), array ('name' => 'port_type_id'), $port['oif_id']);
+		if ($port['iif_id'] != 1)
+			echo '</label>';
+		echo '</td>';
+
 		// 18 is enough to fit 6-byte MAC address in its longest form,
 		// while 24 should be Ok for WWN
 		echo "<td><input type=text name=l2address value='${port['l2address']}' size=18 maxlength=24></td>\n";
